syntax = "proto3";

option go_package = "app/api/data";

package data;

service Data {
	rpc TweetStream(TweetStreamRequest) returns (stream TweetStreamResponse) {}

	rpc EntityData(EntityRequest) returns (EntityResponse) {}
}

enum FreebirdEntity {
	SHILL = 0;
	COMPANY = 1;
}

message TweetStreamRequest {
}

message TweetStreamResponse {
	FreebirdEntity entity_type = 1;
	string entity_name = 2;
}

message EntityRequest {
	FreebirdEntity entity_type = 1;
	string entity_name = 2;
}

message EntityResponse {
	string gaming = 1;
}
